# EinsteinTensors

./: .gitignore  MANIFEST.in  README.md  einstein.ipynb  einstein.py  einstein2.ipynb  einstein_tensors 2.py  einstein_tensors.py  einstein_transformer.ipynb  requirements.txt  setup.cfg  setup.py  transformer.ipynb
archive/: e2.py  einstein.ipynb  einstein.lark  einstein2.ipynb  jax_experiments.ipynb
einstein_tensors/: __init__.py  einstein.lark  einstein.py
src/einstein_tensors/: einstein.py
