[metadata]
name = einstein-tensors-IsaacBreen
version = 0.0.1
author = Isaac Breen
author_email = mail@isaacbreen.com
description = Seriously terse Einstein summnation notation for tensors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IsaacBreen/EinsteinTensors
project_urls =
    Bug Tracker = https://github.com/IsaacBreen/EinsteinTensors/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
